# ccgen

./: .gitignore  Cargo.toml  calc.py  crk_cam_timings.puml  openocd.gdb  readme.md
.cargo/: config
src/: hwsiggen.rs  main.rs  periph.rs  pot.rs  pushbutton.rs  system.rs
src/com/: mod.rs
src/crkcam/: cam.rs  cam_cfg.rs  cmn.rs  crk.rs  crk_cfg.rs  mod.rs  siggen.rs  spdmngr.rs
